@@ -25,7 +25,11 @@ applicationDefaultJvmArgs = ["--add-exports=javafx.graphics/com.sun.javafx.stage
                              "--add-exports=javafx.graphics/com.sun.javafx.util=ALL-UNNAMED",
                              "--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED",
                              "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
-                             "--add-opens=javafx.graphics/javafx.css=ALL-UNNAMED"
+                             "--add-opens=javafx.graphics/javafx.css=ALL-UNNAMED",
+                             "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
+                             "--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
+                             "--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED"
+
 ]
 
 dependencies {
